# evalops

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: background.md  claude_best_practices.md  roadmap.md
evalops/: __init__.py  _async.py  cache.py  compare.py  core.py  history.py
examples/: dev_loop.py  quickstart.py
ragcheck/: __init__.py  core.py
tests/: test_async.py  test_cache.py  test_compare.py  test_core.py  test_external_developer.py  test_history.py  test_integration.py  test_robustness.py
