[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalops"
version = "1.0.0"
description = "LLM output evaluation for teams that ship. Failure modes, cost tracking, regression gates, and SQLite history. No ground truth needed."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["llm", "evaluation", "rag", "mlops", "ai-quality"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/AarushSharmaa/evalops"
Repository = "https://github.com/AarushSharmaa/evalops"
Issues = "https://github.com/AarushSharmaa/evalops/issues"
