[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalsystem"
version = "1.0.0"
description = "Evaluate RAG pipelines in production. Scores faithfulness, relevance, and retrieval quality using any LLM you already have. No ground truth, no mandatory dependencies."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["llm", "evaluation", "rag", "mlops", "ai-quality"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/AarushSharmaa/evalops"
Repository = "https://github.com/AarushSharmaa/evalops"
Issues = "https://github.com/AarushSharmaa/evalops/issues"

[tool.hatch.build.targets.wheel]
packages = ["evalops"]
